construction of Meetup URL

--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
   <div id="map"></div>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC05U7hyAYYT94x7mf8Iiky7ae54hUMaLo&callback=initMap">
   </script>
-  <script src="MMA.js"></script>
+  <script src="JS/meetupApp.js"></script>
 </body>
 
 </html>
