--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
          <!-- Google Maps API -->
          <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC05U7hyAYYT94x7mf8Iiky7ae54hUMaLo&callback=initMap"></script>
 
-         <script type="text/javascript">
+         <!-- <script type="text/javascript">
 
              $(document).ready(function () {
                  $('#sidebarCollapse').on('click', function () {
                      $('#sidebar').toggleClass('active');
                  });
              });
-        </script>
+        </script> -->
 
     <script src="meetupApp.js"></script>
         
