--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                             Sports!
                         </a>
                         <ul id="buttons">
-                            <li><data-name="#soccer">Soccer</a></li>
-                            <li><data-name"#Football">Football</a></li>
-                            <li><data-name"#Basketball">Basketball</a></li>
-                            <li><data-name "#Baseball">Baseball</a></li>
-                            <li><data-name "#Softball">Softball</a></li>
-                            <li><data-name "#Tennis">Tennis</a></li>
+                            <li><data-name="soccer">Soccer</a></li>
+                            <li><data-name"Football">Football</a></li>
+                            <li><data-name"Basketball">Basketball</a></li>
+                            <li><data-name "Baseball">Baseball</a></li>
+                            <li><data-name "Softball">Softball</a></li>
+                            <li><data-name "Tennis">Tennis</a></li>
 
 
                         </ul>
