Connecting Meetup and getting Sportname

--- a/index.html
+++ b/index.html
@@ -34,27 +34,13 @@
                         <i class="glyphicon glyphicon-home"></i>
                         Sports!
                     </a>
-                    <ul id="buttons">
-                        <li>
-                            <data-name="soccer">Soccer</a>
-                        </li>
-                        <li>
-                            <data-name "Football">Football</a>
-                        </li>
-                        <li>
-                            <data-name "Basketball">Basketball</a>
-                        </li>
-                        <li>
-                            <data-name "Baseball">Baseball</a>
-                        </li>
-                        <li>
-                            <data-name "Softball">Softball</a>
-                        </li>
-                        <li>
-                            <data-name "Tennis">Tennis</a>
-                        </li>
-
-
+                    <ul class="">                        
+                        <li class="buttons" data-name="soccer">Soccer</li>
+                        <li class="buttons" data-name="Football">Football</li>
+                        <li class="buttons" data-name="Basketball">Basketball</li>
+                        <li class="buttons" data-name="Baseball">Baseball</li>
+                        <li class="buttons" data-name="Softball">Softball</li>
+                        <li class="buttons" data-name="Tennis">Tennis</li>
                     </ul>
                 </li>
                 <li>
