--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </ul>
 
             <ul class="list-unstyled CTAs">
-                <button type="button">Clear Results</button>
+                <button class="clear-button" type="button">Clear Results</button>
 
             </ul>
         </nav>
